--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,3 +10,9 @@ spring:
   mvc.view:
     prefix: /WEB-INF/
     suffix: .jsp
+
+logging.level:
+    root: INFO
+    org.superbiz.moviefun.albums: ERROR
+    org.superbiz.moviefun.movies: DEBUG
+
