finish the background job with database

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,3 +14,9 @@ spring:
 logging.level:
   root: WARN
   org.superbiz.moviefun: DEBUG
+
+s3:
+  endpointUrl: http://127.0.0.1:9000
+  accessKey: Q5GIJN16TOO2TY3YX21K
+  secretKey: ceD4xwFrMEU8HQ5r9lYIb+waqyQOunF7RsCn3KJt
+  bucketName: moviefun
